<resources>
    <string name="app_name">Dashboard</string>
    <string name="placeholder"></string>
    <string name="version">Version: V5.0</string>
	<string name="service">Service: Running</string>
    <string name="device_info_default">Unknown</string>
    <string name="bucket">Unknown</string>
    <string name="tool">Tools</string>
    <string name="nw">New User</string>
    <string name="save">Save</string>
    <string name="discart">Discard</string>
    <string name="cancel">Cancel</string>
    <string name="edit_key">Property Key</string>
    <string name="edit_name">Property Name</string>
    <string name="unsaved_changes_title">Unsaved Changes</string>
    <string name="unsaved_changes_message">Would you like to set this property?</string>
    <string name="add">Add</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="media_dialog">Media preview</string>
    <string name="dir_info">Folder Information</string>
    <string name="ok">OK</string>
    <string name="changelog_full_title">Changelog</string>
    <string name="changelog_title">What\'s New</string>
    <string name="changelog_error">Cannot get changelog, are you running Catalyst?</string>
    <string name="kill_app">Kill</string>
    <string name="refresh_app">Refresh</string>
    <string name="no_processes">Clean Slate</string>
    <string name="process">Processes</string>
    <string name="available_mem">Available Memory</string>
    <string name="progress_title">Loading...</string>
    <string name="progress_message">Please Wait...</string>
    <string name="bionx_website">Bionx Home:bionx.webs.com</string>
    <string name="bionx_donation">Donate to Biotic:http://goo.gl/qpb4z</string>
    <string name="bionx_forum">Phandroid:http://goo.gl/fXwlr</string>
    <string name="bionx_facebook">Bionx Facebook:http://goo.gl/WnxG9</string>
    <string name="twitter">Follow Biotic Twitter:https://twitter.com/Rgocal</string>
   	<string name="developer">Rom Developer: Biotic</string>
   	<string name="applying">Applying selection now</string>
   	<string name="action_apply">Apply</string>
    <string name="calibration_prefs_key">calibration_prefs_key</string>
    <string name="calibration_settings_title">Battery calibration</string>
    <string name="battery_calibration_step1">1) Plug device into charger</string>
    <string name="battery_calibration_step2">2) Allow battery to charge to 100%</string>
    <string name="battery_calibration_step3">3) Click \'Calibrate Battery\' button</string>
    <string name="battery_calibration_step4">4) Unplug your device</string>
    <string name="button_calibrate_battery">Calibrate Batery</string>
    <string name="button_override">Step 2 Overide</string>
    <string name="battery_info_text">Battery: </string>
    <string name="android_id_prefs_key">android_id_pref_key</string>
    <string name="android_id_settings_title">Android ID tool</string>
    <string name="error_copying_binary">There was an error trying to copy the sqlite3 binary.</string>
    <string name="dialog_root_required_title">Root Required</string>
    <string name="dialog_root_required_body">Root permissions are required in order for this app to perform it\'s functions.  Root permissions were not granted or root is not possible on this device.</string>
    <string name="dialog_update_id_failure_title">Update failure</string>
    <string name="dialog_update_id_failure_body">Unfortunately the updating of the ID was not successful. Please contact the developer.</string>
    <string name="id_backup_exists">No backup exists</string>
    <string name="android_id_title">Current ID</string>
    <string name="android_backup_id_title">Saved ID</string>
    <string name="button_backup_id">Save current ID</string>
    <string name="button_restore_id">Restore saved ID</string>
    <string name="media_scanner_prefs_key">media_scanner_pref_key</string>
    <string name="media_scanner_settings_title">Invoke media scanner</string>
    <string name="logcat_prefs_key">logcat_pref_key</string>
    <string name="logcat_settings_title">Logcat tool</string>
    <string name="config_wallpaper_download_loc">Wallpaper Downloads</string>
    <string name="config_wallpaper_sdcard_dl_location">SDcard Wallpaper Downloads</string>
    <string name="config_wallpaper_manifest_url">Manifest Configurations</string>
    <string name="page">Page</string>
	<string name="pt_init_d">Start-up Tweaks</string>
	<string name="pt_enable_init_d">Enable start-up tweaks</string>
	<string name="pt_zipalign">Zipalign apks</string>
	<string name="pt_enable_sd_boost">Enable SD boost</string>
	<string name="pt_sd_boost">Read ahead value</string>
	<string name="pt_fix_permissions">Fix permissions</string>
	<string name="pt_clear_cache">Clear cache</string>
	<string name="pt_cache">Dalvik2Cache</string>
	<string name="pt_ram">RAM Script</string>
	<string name="pt_rgdn">Seeder</string>
	<string name="pt_sqlite">SQLITE</string>
	<string name="pt_tether">Tethering</string>
	<string name="navbar_changer"> Navigation Bar Tweaked</string>
	<string name="ps_init_d">Configure tweaks that are run at boot
		(init.d)
	</string>
	<string name="ps_enable_init_d">Enable/disabe start-up tweaks</string>
	<string name="ps_zipalign">Zipalign any unaligned apps on each boot</string>
	<string name="ps_enable_sd_boost">Enable/disable SD card speed boost</string>
	<string name="ps_sd_boost">Set value of read ahead in kb</string>
	<string name="ps_fix_permissions">Fix permissions for apps on each boot</string>
	<string name="ps_clear_cache">Clear data cache on each boot</string>
	<string name="ps_cache">Populate dalvik in cache</string>
	<string name="ps_ram">Free more ram at boot</string>
	<string name="ps_rgdn">Enable automatic rgdn services</string>
	<string name="ps_sqlite">Enable silent sqlite services</string>
	<string name="ps_tether">Hack hotspot for free services regarding those who are on a family shared plan</string>
	<string name="rate_title">Rate %s</string>
    <string name="rate_message">Enjoy using, %s on your device? Take the time to rate Bionx to help improve everyones experience!</string>
    <string name="rate">+1 %s</string>
    <string name="rate_later">Remind me later</string>
    <string name="rate_cancel">Everythings running fine!</string>
    <string name="tab_cpu_settings">CPU Settings</string>
    <string name="tab_cpu_profiles">CPU Profiles</string>
    <string name="tab_battery_info">Battery</string>
    <string name="tab_oom_settings">Memory Settings</string>
    <string name="tab_time_in_state">Time In State</string>
    <string name="tab_voltage_settings">Voltage Settings</string>
    <string name="tab_cpu_info">CPU Info</string>
    <string name="tab_disk_info">Disk Info</string>
    <string name="t_cpu_settings">CPU SETTINGS</string>
    <string name="t_battery_info">BATTERY</string>
    <string name="t_oom_settings">MEMORY SETTINGS</string>
    <string name="t_volt_settings">VOLTAGE SETTINGS</string>
    <string name="t_adv_settings">"ADVANCED SETTINGS"</string>
    <string name="t_time_in_state">"TIME IN STATE"</string>
    <string name="t_cpu_info">CPU INFO</string>
    <string name="t_disk_info">DISK INFO</string>
    <string name="menu_tab">Tabs</string>
    <string name="mt_refresh">Refresh</string>
    <string name="mt_app_settings">"App Settings"</string>
    <string name="mt_reset">Reset</string>
    <string name="mt_restore">Restore</string>
    <string name="mt_plus25">Increase by 25 mV</string>
    <string name="mt_minus25">Decrease by 25 mV</string>
    <string name="current_speed">Current Speed</string>
    <string name="current_max">Current max:</string>
    <string name="current_min">Current min:</string>
    <string name="governor">Governor</string>
    <string name="io">IO Scheduler</string>
    <string name="sob">Set on boot</string>
    <string name="prefcat_free_memory">FREE MEMORY</string>
    <string name="prefcat_tweaks">FAST CHARGE</string>
    <string name="prefcat_misc_short">MISC</string>
    <string name="prefcat_read_ahead">SD READ AHEAD</string>
    <string name="prefcat_vm_settings">VM SETTINGS</string>
    <string name="dt_free_memory">Minfree Taskkiller</string>
    <string name="dt_read_ahead">SD Read Ahead</string>
    <string name="pt_free_memory">Free memory</string>
    <string name="ps_free_memory">Amount of RAM the minfree taskkiller will keep |
        Current: %s
    </string>
    <string name="ps_free_memory_boot">Apply the amount above at boot</string>
    <string name="pt_read_ahead">SD read ahead</string>
    <string name="ps_read_ahead">Amount to read ahead on SDCard reads in kb |
        Current: %s
    </string>
    <string name="ps_fast_charge_boot">Fast charge</string>
    <string name="fast_charge_warning">YOU WILL NOT BE ABLE TO CONNECT TO YOUR PC AFTER
        EACH REBOOT!\n\nWhile Fast Charge is ON, you can *only* charge your phone!
    </string>
    <string name="fast_charge_notification_title">Fast Charge is ON!</string>
    <string name="fast_charge_notification_message">Phone is in charge-only mode!</string>
   <string name="prefcat_oom">MINFREE TASKKILLER</string>
   <string name="title_foreground_app">Foreground Applications</string>
   <string name="title_visible_app">Visible Applications</string>
   <string name="title_secondary_server">Secondary Server</string>
   <string name="title_hidden_app">Hidden Applications</string>
   <string name="title_content_providers">Content Providers</string>
   <string name="title_empty_app">Empty Applications</string>
   <string name="prefcat_oom_predefines">PRESETS</string>
   <string name="pt_oom">Minfree Taskkiller Presets</string>
   <string name="pt_verylight">Very Light</string>
   <string name="pt_light">Light</string>
   <string name="pt_medium">Medium</string>
   <string name="pt_aggressive">Aggressive</string>
   <string name="pt_veryaggressive">Very Aggressive</string>
    <string name="prefcat_user_proc">NOT KILLABLE USER PROCESSES</string>
    <string name="prefcat_sys_proc">NOT KILLABLE SYSTEM PROCESSES</string>
    <string name="pt_user_proc">Enable not killable user processes</string>
    <string name="pt_sys_proc">Enable not killable system processes</string>
    <string name="pt_user_names_proc">User Processes whitelist</string>
    <string name="pt_sys_names_proc">System Processes whitelist</string>
    <string name="ps_restore_boot">Restore above settings at boot</string>
    <string name="ps_user_proc">The list of user process names (comma separated)</string>
    <string name="ps_sys_proc">The list of system process names (comma separated)</string>
    <string name="no_proc">No packages</string>
    <string name="prefcat_bln">BACKLIGHT NOTIFICATION</string>
    <string name="pt_bln">Backlight Notification</string>
   <string name="blx_info">Battery Life eXtender feature\nAuthor Ezekeel</string>
   <string name="prefcat_blx">BATTERY LIFE EXTENDER</string>
   <string name="pt_blx_boot">Set on boot</string>
   <string name="ps_blx_boot">Apply the amount above at boot</string>
   <string name="blx_title">Charge limit:</string>
   <string name="dsync_info">Dynamic FSync feature\nAuthor Paul Reioux (faux123)</string>
   <string name="prefcat_dsync">DYNAMIC FSYNC</string>
   <string name="ps_dsync">Setting will be restored on reboot</string>
   <string name="pt_dsync">Dynamic Fsync</string>
   <string name="prefcat_bltimeout">BACKLIGHT TIMEOUT</string>
   <string name="ps_bltimeout">%s ms</string>
   <string name="bltimeout_title">Backlight timeout</string>
   <string name="prefcat_bltouch">BACKLIGHT ON TOUCHSCREEN</string>
    <string name="bd">Bionx Dashboard</string>
    <string name="ads">Advertisements</string>
    <string name="comm">Community</string>
    <string name="bs">Biotics Store</string>
    <string name="sn">Store Notifications</string>
    <string name="iw">Info Flow</string>
    <string name="social">Social Networking</string>
</resources>