<ScrollView 
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
	xmlns:card="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/scrollView1"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context="com.bionx.res.DashMainActivity" >
    <LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical" >
    	
        <TextView
        	android:id="@+id/textView1"
        	android:textColor="@color/holoblue"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/bd"
        	android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <it.gmariotti.cardslib.library.view.CardView
        android:id="@+id/card1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card"
        card:card_layout_resourceID="@layout/card_thumbnail_layout" >
    	</it.gmariotti.cardslib.library.view.CardView>
        <TextView
        	android:id="@+id/textView8"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/social"
        	android:textAppearance="?android:attr/textAppearanceMedium" />
        <HorizontalScrollView
    	android:id="@+id/horizontalScrollView1"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content" >
    	<LinearLayout
    		android:layout_width="wrap_content"
    		android:layout_height="match_parent"
    		android:orientation="horizontal" >
    		<it.gmariotti.cardslib.library.view.CardView
    			android:id="@+id/card11"
    			android:layout_width="150dp"
    			android:layout_height="wrap_content"
    			android:layout_marginLeft="12dp"
    			android:layout_marginRight="12dp"
    			android:layout_marginTop="12dp"
    			android:background="@drawable/card"
    			card:card_layout_resourceID="@layout/card_thumbnail_layout" >
    		</it.gmariotti.cardslib.library.view.CardView>
    		<it.gmariotti.cardslib.library.view.CardView
    			android:id="@+id/card12"
    			android:layout_width="150dp"
    			android:layout_height="wrap_content"
    			android:layout_marginLeft="12dp"
    			android:layout_marginRight="12dp"
    			android:layout_marginTop="12dp"
    			android:background="@drawable/card"
    			card:card_layout_resourceID="@layout/card_thumbnail_layout" >
    		</it.gmariotti.cardslib.library.view.CardView>
    		<it.gmariotti.cardslib.library.view.CardView
    			android:id="@+id/card13"
    			android:layout_width="150dp"
    			android:layout_height="wrap_content"
    			android:layout_marginLeft="12dp"
    			android:layout_marginRight="12dp"
    			android:layout_marginTop="12dp"
    			android:background="@drawable/card"
    			card:card_layout_resourceID="@layout/card_thumbnail_layout" >
    		</it.gmariotti.cardslib.library.view.CardView>
    	</LinearLayout>
    </HorizontalScrollView>
    <TextView
        	android:id="@+id/textView4"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/comm"
        	android:textAppearance="?android:attr/textAppearanceMedium" />
    <HorizontalScrollView
    	android:id="@+id/horizontalScrollView2"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content" >
    	<LinearLayout
    		android:layout_width="wrap_content"
    		android:layout_height="match_parent"
    		android:orientation="horizontal" >
    		<it.gmariotti.cardslib.library.view.CardView
    			android:id="@+id/card2"
    			android:layout_width="150dp"
    			android:layout_height="wrap_content"
    			android:layout_marginLeft="12dp"
    			android:layout_marginRight="12dp"
    			android:layout_marginTop="12dp"
    			android:background="@drawable/card"
    			card:card_layout_resourceID="@layout/card_thumbnail_layout" >
    		</it.gmariotti.cardslib.library.view.CardView>
    		<it.gmariotti.cardslib.library.view.CardView
    			android:id="@+id/card3"
    			android:layout_width="150dp"
    			android:layout_height="wrap_content"
    			android:layout_marginLeft="12dp"
    			android:layout_marginRight="12dp"
    			android:layout_marginTop="12dp"
    			android:background="@drawable/card"
    			card:card_layout_resourceID="@layout/card_thumbnail_layout" >
    		</it.gmariotti.cardslib.library.view.CardView>
    		<it.gmariotti.cardslib.library.view.CardView
    			android:id="@+id/card5"
    			android:layout_width="150dp"
    			android:layout_height="wrap_content"
    			android:layout_marginLeft="12dp"
    			android:layout_marginRight="12dp"
    			android:layout_marginTop="12dp"
    			android:background="@drawable/card"
    			card:card_layout_resourceID="@layout/card_thumbnail_layout" >
    		</it.gmariotti.cardslib.library.view.CardView>
    	</LinearLayout>
    </HorizontalScrollView>
    	<TextView
        	android:id="@+id/textView5"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/bs"
        	android:textAppearance="?android:attr/textAppearanceMedium" />
    	<it.gmariotti.cardslib.library.view.CardView
        android:id="@+id/card4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_bar"
        card:card_layout_resourceID="@layout/card_thumbnail_layout" >
    </it.gmariotti.cardslib.library.view.CardView>
    <TextView
        	android:id="@+id/textView6"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/sn"
        	android:textAppearance="?android:attr/textAppearanceMedium" />
    <LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:gravity="center_horizontal" >
    	
    <it.gmariotti.cardslib.library.view.CardView
        android:id="@+id/card6"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/card"
        card:card_layout_resourceID="@layout/card_thumbnail_layout"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="12dp" >
    </it.gmariotti.cardslib.library.view.CardView>
    <it.gmariotti.cardslib.library.view.CardView
        android:id="@+id/card7"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/card"
        card:card_layout_resourceID="@layout/card_thumbnail_layout"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="12dp" >
    </it.gmariotti.cardslib.library.view.CardView>
    	</LinearLayout>
    	<TextView
        	android:id="@+id/textView7"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/iw"
        	android:textAppearance="?android:attr/textAppearanceMedium" />
    <it.gmariotti.cardslib.library.view.CardView
        android:id="@+id/card10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_bar"
        card:card_layout_resourceID="@layout/card_thumbnail_layout" >
    </it.gmariotti.cardslib.library.view.CardView>
    <TextView
        	android:id="@+id/ads"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/ads"
        	android:textAppearance="?android:attr/textAppearanceMedium" />
    <LinearLayout
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical" >
    
        <it.gmariotti.cardslib.library.view.CardView
        	android:id="@+id/adCardone"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:background="@drawable/bottom_bar"
        	card:card_layout_resourceID="@layout/card_thumbnail_layout" >
        </it.gmariotti.cardslib.library.view.CardView>
        
        <it.gmariotti.cardslib.library.view.CardView
        	android:id="@+id/adCardtwo"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:background="@drawable/bottom_bar"
        	card:card_layout_resourceID="@layout/card_thumbnail_layout" >
        </it.gmariotti.cardslib.library.view.CardView>
        
        <it.gmariotti.cardslib.library.view.CardView
        	android:id="@+id/adCardthree"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:background="@drawable/bottom_bar"
        	card:card_layout_resourceID="@layout/card_thumbnail_layout" >
        </it.gmariotti.cardslib.library.view.CardView>
        
    	</LinearLayout>
    </LinearLayout>
</ScrollView>